First, simple working solution with basic tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.tomcat.threads.max=20
+server.connection-timeout=5s
+server.tomcat.max-http-post-size=300MB
 
+logging.level.com.verygoodbank.tes.products=debug
+logging.level.org.springframework.web=warn
